fixed spacing on login form, moved "register here" link

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -177,3 +177,13 @@
    width: 50%;
    padding: 10px;
 }
+
+.login {
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
+
+.left-button {
+  text-align: left;
+}
+
